add css animation and make chat picturs round

--- a/simple-chat/src/chat_list/css/chat.css
+++ b/simple-chat/src/chat_list/css/chat.css
@@ -8,6 +8,11 @@
     flex-direction: row;
     color: black;
     background-color: white;
+    transition: background-color 0.5s  0.2s; ;
+}
+
+.chat:hover {
+    background-color: #dcc8e3;
 }
 
 .chat-picture {
@@ -15,6 +20,9 @@
     align-items: center;
 }
 
+.picture {
+    border-radius: 60px;
+}
 .chat-details {
     display:flex;
     flex-direction: column;
