--- a/exam/src/components/Header/Header.module.css
+++ b/exam/src/components/Header/Header.module.css
@@ -8,3 +8,17 @@
     color: #5d6065;
     border-bottom: solid #e5e5e5;
 }
+.history {
+    background-color: #ebf0fb;
+    border-radius: 50px;
+    color: #3775e0;
+    border: none;
+    margin-left: 1.5%;
+    margin-top: 1.5%;
+    height: 50px;
+    width: 50px;
+}
+.hisroty_title {
+    color: #3775e0;
+    margin-left: 1%;
+}
