--- a/react-chat/src/components/Message/Message.module.css
+++ b/react-chat/src/components/Message/Message.module.css
@@ -10,7 +10,7 @@
     word-break:break-all;
     align-self: flex-end;
     background-color: #f1e5f4;
-    animation: anim-lineUp 0.8s  ;
+    animation: anim-lineUp 0.8s;
 }
 
 .message_text {
@@ -48,3 +48,10 @@
       transform: translateY(0%);
     }
   }
+
+.image {
+    max-width: 200px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-radius: 20px;
+}
